--- a/style.css
+++ b/style.css
@@ -4913,6 +4913,25 @@ e.g. on the intern testimonial page */
   font-transform: uppercase;
   margin-left: 1rem; }
 
+/* Ajax Load More Overrides */
+#ajax-load-more .alm-listing .alm-reveal > li {
+  padding: 0px; }
+  #ajax-load-more .alm-listing .alm-reveal > li img {
+    margin-right: 20px;
+    margin-bottom: 0;
+    position: relative;
+    width: 30%;
+    float: left; }
+  @media screen and (min-width: 600px) {
+    #ajax-load-more .alm-listing .alm-reveal > li {
+      padding: 0 0 0 170px; }
+      #ajax-load-more .alm-listing .alm-reveal > li img {
+        margin-right: 0;
+        margin-bottom: 27px;
+        position: absolute;
+        width: 150px;
+        float: none; } }
+
 .sidebar-divider {
   border-left: 1px solid #e6e6e6; }
 
